[package]
name = "piston"
version = "0.53.2"
edition = "2018"
authors = [
    "bvssvni <bvssvni@gmail.com>",
    "Coeuvre <coeuvre@gmail.com>",
    "gmorenz",
    "leonkunert <info@leonkunert.de>",
    "mitchmindtree <me@michellnordine.com>",
    "Christiandh",
    "Apointos",
    "ccgn",
    "reem",
    "TyOverby <ty@pre-alpha.com>",
    "eddyb",
    "Phlosioneer <mattmdrr2@gmail.com"
]
keywords = ["piston", "game", "engine", "core"]
description = "The Piston game engine core libraries"
license = "MIT"
repository = "https://github.com/PistonDevelopers/piston.git"
homepage = "https://github.com/PistonDevelopers/piston"
documentation = "https://docs.rs/piston"
readme = "README.md"
exclude = ["images/*", "Cargo.png"]

[lib]
name = "piston"
path = "./src/lib.rs"

[dependencies.pistoncore-input]
path = "src/input"
version = "1.0.1"

[dependencies.pistoncore-window]
path = "src/window"
version = "0.47.1"

[dependencies.pistoncore-event_loop]
path = "src/event_loop"
version = "0.53.1"

[workspace]
members = [
  "src/input",
  "src/window",
  "src/event_loop"
]
