[package]

name = "pistoncore-event_loop"
version = "0.23.1"
authors = [
    "bvssvni <bvssvni@gmail.com>",
    "Coeuvre <coeuvre@gmail.com>",
    "gmorenz",
    "bfops",
]
keywords = ["game", "event", "loop", "piston"]
description = "A generic event loop for games and interactive applications"
license = "MIT"
readme = "README.md"
repository = "https://github.com/PistonDevelopers/piston.git"
homepage = "https://github.com/PistonDevelopers/piston"

[lib]

name = "event_loop"
path = "src/lib.rs"

[dependencies.pistoncore-window]
path = "../window"
version = "0.21.0"

[dependencies.pistoncore-input]
path = "../input"
version = "0.12.0"

[dependencies]
time = "0.1.33"
piston-viewport = "0.2.0"
