[package]

name = "pistoncore-event_loop"
version = "0.39.0"
authors = [
    "bvssvni <bvssvni@gmail.com>",
    "Coeuvre <coeuvre@gmail.com>",
    "gmorenz",
    "bfops",
]
keywords = ["game", "event", "loop", "piston"]
description = "A Piston event loop for games and interactive applications"
license = "MIT"
readme = "README.md"
repository = "https://github.com/PistonDevelopers/piston.git"
homepage = "https://github.com/PistonDevelopers/piston"
documentation = "https://docs.rs/pistoncore-event_loop"

[lib]

name = "event_loop"
path = "src/lib.rs"

[dependencies.pistoncore-window]
path = "../window"
version = "0.34.0"

[dependencies.pistoncore-input]
path = "../input"
version = "0.23.0"
