[package]
name = "pistoncore-game"
version = "0.1.0"
authors = ["Sven Nilsen <bvssvni@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.pistoncore-input]
path = "../input"
version = "0.28.0"

[dependencies.pistoncore-window]
path = "../window"
version = "0.44.0"
