[package]
name = "pistoncore-input"
version = "0.8.0"
authors = ["bvssvni <bvssvni@gmail.com>"]
keywords = ["keyboard", "mouse", "input", "piston"]
description = "A structure for user input"
license = "MIT"
readme = "README.md"
repository = "https://github.com/PistonDevelopers/piston.git"
homepage = "https://github.com/PistonDevelopers/piston"

[lib]
name = "input"
path = "src/lib.rs"

[dependencies]
rustc-serialize = "0.3.16"
bitflags = "0.3.2"
piston-viewport = "0.2.0"
