[package]
name = "pistoncore-input"
version = "0.23.0"
authors = ["bvssvni <bvssvni@gmail.com>"]
keywords = ["keyboard", "mouse", "input", "piston"]
description = "A structure for user input"
license = "MIT"
readme = "README.md"
repository = "https://github.com/PistonDevelopers/piston.git"
homepage = "https://github.com/PistonDevelopers/piston"
documentation = "https://docs.rs/pistoncore-input"

[lib]
name = "input"
path = "src/lib.rs"

[dependencies]
serde_derive = "1.0"
serde = "1.0"
bitflags = "1.0.0"
piston-viewport = "0.5.0"

[dev-dependencies]
serde_json = "1.0"
