[package]
name = "pistoncore-window"
version = "1.0.0"
edition = "2018"
authors = [
    "bvssvni <bvssvni@gmail.com>",
    "Coeuvre <coeuvre@gmail.com>",
    "Phlosioneer <mattmdrr2@gmail.com>"
]
keywords = ["window", "game", "piston"]
description = "A library for window abstraction"
license = "MIT"
readme = "README.md"
repository = "https://github.com/PistonDevelopers/piston.git"
homepage = "https://github.com/PistonDevelopers/piston"
documentation = "https://docs.rs/pistoncore-window"

[lib]
name = "window"
path = "src/lib.rs"

[dependencies.pistoncore-input]
path = "../input"
version = "1.0.1"

[dependencies]
piston-graphics_api_version = "1.0.0"
